--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^5.2.3"
   },
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "prettier": "^1.18.2"
+  }
 }
